fix(accordion): add overflow hidden to item style (#1924)
Prevents content of an Accordion Item to contribute to height

--- a/consumables/scss/components/accordion/accordion.scss
+++ b/consumables/scss/components/accordion/accordion.scss
@@ -14,6 +14,7 @@
     box-sizing: border-box;
     transition: all $transition--base $bx--standard-easing;
     border-top: 1px solid $color__navy-gray-2;
+    overflow: hidden;
 
     @include light-ui {
       border-top: 1px solid $color__gray-1;
@@ -86,4 +87,3 @@
 }
 
 }
-
